[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Bridge.png" type="Texture" id=1]
[ext_resource path="res://Sprites/SnowStreet/Background.jpg" type="Texture" id=2]
[ext_resource path="res://Scenes/Templates/Body.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/stranger.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Triggers/CallFunctionOnEnter.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/ui/Enable.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Scenes/Chapter2/3-Disappearance/26.StrangerAI.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Scenes/Chapter2/3-Disappearance/26.Bridge.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 104, 96 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1016, 96 )

[node name="Bridge" type="Node2D"]
script = ExtResource( 8 )
dialog_path = "res://Dialogs/Chapter2/Disappearance/Bridge.json"
dialog_path_2 = "res://Dialogs/Chapter2/Disappearance/Bridge_2.json"
scene_path = "res://Scenes/Chapter2/3-Disappearance/27.Jump.tscn"

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.866667, 0.819608, 0.819608, 1 )
position = Vector2( 972, 500 )
scale = Vector2( 0.514, 0.402667 )
texture = ExtResource( 2 )

[node name="Bridge" type="Sprite" parent="."]
position = Vector2( 928, 865.444 )
scale = Vector2( 64, 48.0998 )
texture = ExtResource( 1 )

[node name="Characters" type="Node2D" parent="."]
modulate = Color( 0.501961, 0.576471, 0.623529, 1 )

[node name="Stranger" type="Sprite" parent="Characters"]
position = Vector2( 344, 744 )
scale = Vector2( 15, 15 )
texture = ExtResource( 4 )
vframes = 3
hframes = 3
frame = 8
script = ExtResource( 7 )
player_path = NodePath("../../../Bridge/Characters/Body")

[node name="StaticBody2D" type="StaticBody2D" parent="Characters/Stranger"]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Characters/Stranger/StaticBody2D"]
position = Vector2( 12.8, 14.9333 )
scale = Vector2( 0.0666667, 0.0666667 )
shape = SubResource( 3 )

[node name="Body" parent="Characters" instance=ExtResource( 3 )]
position = Vector2( 1616, 1008 )
scale = Vector2( 5, 5 )
default_state = 2

[node name="Camera2D" parent="Characters/Body/Character_Sprite" index="0"]
position = Vector2( -21.2333, -4.5609 )
limit_left = 0
limit_top = 0
limit_right = 1900
limit_bottom = 1080
editor_draw_limits = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 952, 1136 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 960, 792 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1888, 968 )
shape = SubResource( 3 )

[node name="DialogTrigger" parent="." instance=ExtResource( 5 )]
position = Vector2( 720, 968 )
scale = Vector2( 8.12, 8.92 )
obj = NodePath("../../Bridge")
method = "show_dialog"

[node name="Teleports" type="Node2D" parent="."]

[node name="TeleportTrigger" parent="Teleports" instance=ExtResource( 5 )]
position = Vector2( 1752, 968 )
scale = Vector2( 3.4, 9.88 )
enabled = false
call_one_time = true
obj = NodePath("../..")
method = "teleport"

[node name="TeleportTrigger2" parent="Teleports" instance=ExtResource( 5 )]
position = Vector2( 1752, 968 )
scale = Vector2( 3.4, 9.88 )
enabled = false
call_one_time = true
obj = NodePath("../..")
method = "teleport_2"

[node name="TeleportTrigger3" parent="Teleports" instance=ExtResource( 5 )]
position = Vector2( 1752, 968 )
scale = Vector2( 3.4, 9.88 )
enabled = false
call_one_time = true
obj = NodePath("../..")
method = "teleport_3"

[node name="Enable-UI" parent="." instance=ExtResource( 6 )]
joystick = true

[editable path="Characters/Body"]
